--- a/environment/custom.env
+++ b/environment/custom.env
@@ -14,7 +14,7 @@
 # WM_SERVICES_MQTT_HOSTNAME="host.extwirepas.com"
 
 # MQTT credentials
-# WM_SERVICES_MQTT_USER=amqttuser
+# WM_SERVICES_MQTT_USERNAME=amqttuser
 # WM_SERVICES_MQTT_PASSWORD=uiaidujfk1897fyeu023849sdh
 
 # MQTT connection - port 1883 (unsecure) must be explicitly set
@@ -26,9 +26,8 @@
 # WM_GW_VERSION=v1.2.0
 # WM_GW_IMAGE=wirepas/gateway
 
-# Raspi settings
 # WM_HOST_HOSTNAME="wm-evk"
-# WM_HOST_SSH_ENABLE_NETWORK_LOGIN="true"
+# WM_HOST_SSH_ENABLE_PASSWORD_LOGIN="true"
 
 # If you want to blacklist a set or specific devices,
 # set the following key accordingly
@@ -38,3 +37,19 @@
 # all devices whose name matches WM_GW_SINK_PORT_RULE
 # WM_GW_SINK_ENUMERATION=false
 # WM_GW_SINK_PORT_RULE="/dev/ttyACM* /dev/ttyUSB*"
+
+
+# Feature selection
+# Use this file to override which features are enabled on your host
+
+# WM_HOST_REBOOT=true # it will restart your host if needed
+# WM_HOST_SYSTEMD_MANAGEMENT=true # requires systemd
+# WM_HOST_CLOCK_MANAGEMENT=true # requires  systemd-timesyncd
+# WM_HOST_BLACKLIST_IPV6=true
+# WM_HOST_SSH_DAEMON_MANAGEMENT=true
+# WM_HOST_AVAHI_DAEMON_MANAGEMENT=true
+# WM_HOST_TTY_MANAGEMENT=true
+# WM_HOST_DBUS_MANAGEMENT=true
+# WM_HOST_SUPPORT_MANAGEMENT=true
+# WM_HOST_DOCKER_PRUNE_ALL=true # it will clean ALL unused volumes and images
+
