--- a/environment/default.env
+++ b/environment/default.env
@@ -12,13 +12,13 @@
 #
 
 # These keys operate on the wm-config
-WM_CFG_UPDATE=${WM_CFG_UPDATE:-"true"}
 WM_CFG_FRAMEWORK_UPDATE=${WM_CFG_FRAMEWORK_UPDATE:-"false"}
+WM_CFG_FRAMEWORK_DEBUG=${WM_CFG_FRAMEWORK_DEBUG:-"false"}
 
 WM_CFG_STARTUP_DELAY=${WM_CFG_STARTUP_DELAY:-"0"}
 WM_CFG_REBOOT_DELAY=${WM_CFG_REBOOT_DELAY:-"2"}
 
-WM_CFG_PYTHON_VIRTUAL_ENV=${WM_CFG_PYTHON_VIRTUAL_ENV:-"${HOME}/.local/virtualenv/wm-config"}
+WM_CFG_PYTHON_VIRTUAL_ENV=${WM_CFG_PYTHON_VIRTUAL_ENV:-"${HOME}/.local/wirepas/virtualenv/wm-config"}
 WM_CFG_PYTHON_VERSION=${WM_CFG_PYTHON_VERSION:-"python3"}
 
 # WM_CONFIG framework updates
@@ -36,7 +36,7 @@ WM_GW_CLEANUP=${WM_GW_CLEANUP:-"false"}
 WM_GW_DBUS_CONF=${WM_GW_DBUS_CONF:-"com.wirepas.sink.conf"}
 WM_GW_DBUS_CONF_USER=${WM_GW_DBUS_CONF_USER:-"root"}
 
-# gateway sink service
+# Gateway sink service
 WM_GW_SINK_ID=${WM_GW_SINK_ID:-0}
 WM_GW_SINK_UART_PORT=${WM_GW_SINK_UART_PORT:-"/dev/ttyWM"}
 WM_GW_SINK_PORT_RULE=${WM_GW_SINK_PORT_RULE:-"/dev/ttyACM* /dev/ttyUSB*"}
@@ -44,8 +44,9 @@ WM_GW_SINK_BLACKLIST=${WM_GW_SINK_BLACKLIST:-}
 WM_GW_SINK_BITRATE_CONFIGURATION=${WM_GW_SINK_BITRATE_CONFIGURATION:-}
 WM_GW_SINK_ENUMERATION=${WM_GW_SINK_ENUMERATION:-"false"}
 WM_GW_SINK_SERVICE_CMD=${WM_GW_SINK_SERVICE_CMD:-"sink"}
+WM_GW_SINK_SERVICE_NETWORK=${WM_GW_SINK_SERVICE_NETWORK:-}
 
-# gateway transport service
+# Gateway transport service
 WM_GW_ID=${WM_GW_ID:-"$(hostname)"}
 WM_GW_MODEL=${WM_GW_MODEL:-"wirepas-evk"}
 WM_GW_VERSION=${WM_GW_VERSION:-"${WM_GW_IMAGE}:${WM_GW_VERSION}"}
@@ -53,6 +54,7 @@ WM_GW_IGNORED_ENDPOINTS_FILTER=${WM_GW_IGNORED_ENDPOINTS_FILTER:-}
 WM_GW_WHITENED_ENDPOINTS_FILTER=${WM_GW_WHITENED_ENDPOINTS_FILTER:-}
 WM_GW_TRANSPORT_SERVICE_CMD=${WM_GW_TRANSPORT_SERVICE_CMD:-"transport"}
 WM_GW_TRANSPORT_SERVICE_NETWORK=${WM_GW_TRANSPORT_SERVICE_NETWORK:-"network_mode: host"}
+
 WM_GW_SERVICES_ENV_FILE=${WM_GW_SERVICES_ENV_FILE:-"${WM_CFG_GATEWAY_PATH}/services.env"}
 WM_GW_SERVICES_USER_PATH=${WM_GW_SERVICES_USER_PATH:-"${WM_CFG_GATEWAY_PATH}/user"}
 
@@ -61,39 +63,51 @@ WM_DOCKER_USERNAME=${WM_DOCKER_USERNAME:-""}
 WM_DOCKER_PASSWORD=${WM_DOCKER_PASSWORD:-""}
 WM_DOCKER_CLEANUP=${WM_DOCKER_CLEANUP:-"true"}
 WM_DOCKER_FORCE_RECREATE=${WM_DOCKER_FORCE_RECREATE:-"false"}
-WM_DOCKER_STATUS_DELAY=${WM_DOCKER_STATUS_DELAY:-"30"}
+WM_DOCKER_STATUS_DELAY=${WM_DOCKER_STATUS_DELAY:-"10"}
 WM_DOCKER_DAEMON_JSON=${WM_DOCKER_DAEMON_JSON:-''}
 
-# Backend specific
+# MQTT
 WM_SERVICES_MQTT_HOSTNAME=${WM_SERVICES_MQTT_HOSTNAME:-"host.extwirepas.com"}
 WM_SERVICES_MQTT_PORT=${WM_SERVICES_MQTT_PORT:-"8883"}
-WM_SERVICES_MQTT_USER=${WM_SERVICES_MQTT_USER:-"mqttuser"}
+WM_SERVICES_MQTT_USERNAME=${WM_SERVICES_MQTT_USERNAME:-"mqttuser"}
 WM_SERVICES_MQTT_PASSWORD=${WM_SERVICES_MQTT_PASSWORD:-"uiaidujfk1897fyeu023849sdh?("};
-WM_SERVICES_ALLOW_UNSECURE=${WM_SERVICES_ALLOW_UNSECURE:-}
-WM_SERVICES_CERTIFICATE_CHAIN=${WM_SERVICES_CERTIFICATE_CHAIN:-}
+WM_SERVICES_MQTT_ALLOW_UNSECURE=${WM_SERVICES_MQTT_ALLOW_UNSECURE:-}
+WM_SERVICES_MQTT_CERTIFICATE_CHAIN=${WM_SERVICES_MQTT_CERTIFICATE_CHAIN:-}
+
+# FLUENTD
+WM_SERVICES_FLUENTD_HOSTNAME=${WM_SERVICES_FLUENTD_HOSTNAME:-}
+WM_SERVICES_FLUENTD_PORT=${WM_SERVICES_FLUENTD_PORT:-"24224"}
+WM_SERVICES_FLUENTD_TAG=${WM_SERVICES_FLUENTD_TAG:-"wm-config"}
+WM_SERVICES_FLUENTD_RECORD=${WM_SERVICES_FLUENTD_RECORD:-"gateway.services"}
+WM_SERVICES_FLUENTD_ASYNC_CONNECT=${WM_SERVICES_FLUENTD_ASYNC_CONNECT:-\"true\"} # must be string
+WM_SERVICES_FLUENTD_SUB_SECOND_PRECISION=${WM_SERVICES_FLUENTD_SUB_SECOND_PRECISION:-\"true\"} # must be string
+WM_SERVICES_FLUENTD_BUFFER_LIMIT=${WM_SERVICES_FLUENTD_BUFFER_LIMIT:-"\"50M\""}
+WM_SERVICES_FLUENTD_RETRY_WAIT=${WM_SERVICES_FLUENTD_RETRY_WAIT:-"\"1s\""}
+WM_SERVICES_FLUENTD_MAX_RETRIES=${WM_SERVICES_FLUENTD_MAX_RETRIES:-"\"3\""}
 
 # WiFi management - set the AP SSID and PASSWORD you want your gw to connect to
 WM_WIFI_ENABLE=${WM_WIFI_ENABLE:-"false"}
 WM_WIFI_AP_SSID=${WM_WIFI_AP_SSID:-''}
 WM_WIFI_AP_PASSWORD=${WM_WIFI_AP_PASSWORD:-''}
+WM_WIFI_INTERFACE=${WM_WIFI_INTERFACE:-"wlan0"}
 
 # Wirepas support - keys to allow FAEs to connect to your box
-WM_SUPPORT_HOST_NAME=${WM_SUPPORT_HOST_NAME:-"${WM_SERVICES_MQTT_HOSTNAME}"}
-WM_SUPPORT_HOST_USER=${WM_SUPPORT_HOST_USER:-"${USER}"}
-WM_SUPPORT_HOST_KEY=${WM_SUPPORT_HOST_KEY:-"${WM_CFG_SETTINGS_PATH}/support.pem"}
-WM_SUPPORT_HOST_KEY_PATH=${WM_SUPPORT_HOST_KEY_PATH:-"${HOME}/.ssh/support.pem"}
-WM_SUPPORT_HOST_PORT=${WM_SUPPORT_HOST_PORT:-''}
+WM_SUPPORT_HOSTNAME=${WM_SUPPORT_HOSTNAME:-"${WM_SERVICES_MQTT_HOSTNAME}"}
+WM_SUPPORT_USERNAME=${WM_SUPPORT_USERNAME:-"${USER}"}
+WM_SUPPORT_KEY=${WM_SUPPORT_KEY:-"${WM_CFG_SETTINGS_PATH}/support.pem"}
+WM_SUPPORT_KEY_PATH=${WM_SUPPORT_KEY_PATH:-"${HOME}/.ssh/support.pem"}
+WM_SUPPORT_PORT=${WM_SUPPORT_PORT:-''}
 
 # Host settings
-WM_HOST_HOSTNAME=${WM_HOST_HOSTNAME:-"wirepas-evk"}
+WM_HOST_HOSTNAME=${WM_HOST_HOSTNAME:-}
 WM_HOST_TTY_SYMLINK=${WM_HOST_TTY_SYMLINK:-"ttyWM"}
+WM_HOST_TTY_SIMLINK_FILENAME=${WM_HOST_TTY_SIMLINK_FILENAME:-"99-wirepas-serial.rules"}
 
 WM_HOST_INSTALL_DEPENDENCIES=${WM_HOST_INSTALL_DEPENDENCIES:-"true"}
-WM_HOST_UPGRADE_PACKAGES=${WM_HOST_UPGRADE_PACKAGES:-"true"}
+WM_HOST_UPGRADE_PACKAGES=${WM_HOST_UPGRADE_PACKAGES:-"false"}
 
-WM_HOST_SSH_ENABLE_NETWORK_LOGIN=${WM_HOST_SSH_ENABLE_NETWORK_LOGIN:-"true"}
-WM_HOST_IPV6_DISABLE=${WM_HOST_IPV6_DISABLE:-"false"}
-WM_HOST_USER_NAME=${WM_HOST_USER_NAME:-"pi"}
+WM_HOST_SSH_ENABLE_PASSWORD_LOGIN=${WM_HOST_SSH_ENABLE_PASSWORD_LOGIN:-"true"}
+WM_HOST_USER_NAME=${WM_HOST_USER_NAME:-"${USER}"}
 WM_HOST_USER_PASSWORD=${WM_HOST_USER_PASSWORD:-}
 WM_HOST_USER_PPKI=${WM_HOST_USER_PPKI:-}
 
@@ -103,8 +117,6 @@ WM_HOST_KEYBOARD_XKBLAYOUT=${WM_HOST_KEYBOARD_XKBLAYOUT:-"gb"}
 WM_HOST_KEYBOARD_XKBVARIANT=${WM_HOST_KEYBOARD_XKBVARIANT:-''}
 WM_HOST_KEYBOARD_XKBOPTIONS=${WM_HOST_KEYBOARD_XKBOPTIONS:-''}
 WM_HOST_KEYBOARD_BACKSPACE=${WM_HOST_KEYBOARD_BACKSPACE:-"guess"}
-WM_HOST_AVAHI_SERVICES=${WM_HOST_AVAHI_SERVICES:-"${WM_CFG_HOST_PATH}/ssh.service"}
-WM_HOST_EXPAND_FILESYSTEM=${WM_HOST_EXPAND_FILESYSTEM:-"true"}
 
 # Systemd periodic job
 WM_SYSTEMD_UPDATER=${WM_SYSTEMD_UPDATER:-"wirepas-updater"}
