--- a/templates/wirepas-phone.template
+++ b/templates/wirepas-phone.template
@@ -1,5 +1,5 @@
 [Unit]
-Description=SSH forwarding to ${WM_SUPPORT_HOST_USER}@${WM_SUPPORT_HOST_NAME}:${WM_SUPPORT_HOST_PORT}
+Description=SSH forwarding to ${WM_SUPPORT_USERNAME}@${WM_SUPPORT_HOSTNAME}:${WM_SUPPORT_PORT}
 After=rc-local.service
 After=network-online.target
 Requires=rc-local.service
@@ -8,7 +8,7 @@ Requires=network-online.target
 
 [Service]
 User=${WM_HOST_USER_NAME}
-ExecStart=/usr/bin/autossh -N -i ${WM_SUPPORT_HOST_KEY_PATH} -R ${WM_SUPPORT_HOST_PORT}:localhost:22 -o "ExitOnForwardFailure yes" -o "StrictHostKeyChecking no" -4 ${WM_SUPPORT_HOST_USER}@${WM_SUPPORT_HOST_NAME}
+ExecStart=/usr/bin/autossh -N -i ${WM_SUPPORT_KEY_PATH} -R ${WM_SUPPORT_PORT}:localhost:22 -o "ExitOnForwardFailure yes" -o "StrictHostKeyChecking no" -4 ${WM_SUPPORT_USERNAME}@${WM_SUPPORT_HOSTNAME}
 Restart=always
 RestartSec=30
 StartLimitIntervalSec=120
