--- a/templates/docker-compose.lxgw-transport.template
+++ b/templates/docker-compose.lxgw-transport.template
@@ -1,8 +1,6 @@
-version: '3'
-services:
 
-    wm-gw-transport:
-        container_name: wm-gw-transport
+    wm-gw-transport-${WM_SERVICES_GATEWAY_ID}-${WM_SERVICES_MQTT_HOSTNAME}-${WM_SERVICES_MQTT_PORT}:
+        container_name: wm-gw-transport-${WM_SERVICES_GATEWAY_ID}-${WM_SERVICES_MQTT_HOSTNAME}-${WM_SERVICES_MQTT_PORT}
         image: ${WM_GW_IMAGE}:${WM_GW_VERSION}
 
         user: root
@@ -13,17 +11,23 @@ services:
 
         restart: always
 
-        env_file:
-            - ${WM_GW_SERVICES_ENV_FILE}
-
         environment:
             - PYTHONUNBUFFERED=true
+            - WM_SERVICES_HOST=${WM_SERVICES_HOST}
+            - WM_SERVICES_MQTT_PORT=${WM_SERVICES_MQTT_PORT}
+            - WM_SERVICES_MQTT_USER=${WM_SERVICES_MQTT_USER}
+            - WM_SERVICES_MQTT_PASSWORD=${WM_SERVICES_MQTT_PASSWORD}
+            - WM_SERVICES_GATEWAY_ID=${WM_SERVICES_GATEWAY_ID}
+            - WM_SERVICES_GATEWAY_MODEL=${WM_SERVICES_GATEWAY_MODEL}
+            - WM_SERVICES_GATEWAY_VERSION=${WM_SERVICES_GATEWAY_VERSION}
+            - WM_SERVICES_ALLOW_UNSECURE=${WM_SERVICES_ALLOW_UNSECURE}
+            - WM_SERVICES_CERTIFICATE_CHAIN=${WM_SERVICES_CERTIFICATE_CHAIN}
+            - WM_SERVICES_GATEWAY_IGNORED_ENDPOINTS_FILTER=${WM_SERVICES_GATEWAY_IGNORED_ENDPOINTS_FILTER}
+            - WM_SERVICES_GATEWAY_WHITENED_ENDPOINTS_FILTER=${WM_SERVICES_GATEWAY_WHITENED_ENDPOINTS_FILTER}
+
 
         volumes:
             - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
-            - ${WM_GW_SERVICES_USER_PATH}:/etc/lxgw/usr
+            - ${WM_GW_SERVICES_USER_PATH}:/etc/wirepas/gateway
 
-        logging:
-            driver: journald
-
-        command: transport
+        command: ${WM_GW_TRANSPORT_SERVICE_CMD}
