--- a/templates/wirepas-updater.template
+++ b/templates/wirepas-updater.template
@@ -7,7 +7,7 @@ Requires=network-online.target
 
 [Service]
 User=${WM_HOST_USER_NAME}
-ExecStart=/bin/bash ${WM_CFG_HOST_PATH}/periodic_work.sh
+ExecStart=/bin/bash ${WM_CFG_HOST_DEPENDENCIES_PATH}/periodic_work.sh
 Restart=always
 RestartSec=${WM_SYSTEMD_UPDATER_INTERVAL}s
 
