Docker services setup
This change makes away with the eval
call when redeploying the docker services.

The execution prints are also updated and
provide better traceability on which
image is running (and if an update
happened due to it).

The transport and sink service also receive
further exposure to the custom.env file,
allowing the user to define the restart
policy and container user.

The logging can also be routed through fluentd
to retrieve gateway telemetry data.

Relates to wirepas/gateway#79

--- a/environment/default.env
+++ b/environment/default.env
@@ -45,6 +45,8 @@ WM_GW_SINK_BITRATE_CONFIGURATION=${WM_GW_SINK_BITRATE_CONFIGURATION:-}
 WM_GW_SINK_ENUMERATION=${WM_GW_SINK_ENUMERATION:-"false"}
 WM_GW_SINK_SERVICE_CMD=${WM_GW_SINK_SERVICE_CMD:-"sink"}
 WM_GW_SINK_SERVICE_NETWORK=${WM_GW_SINK_SERVICE_NETWORK:-}
+WM_GW_SINK_SERVICE_RESTART_POLICY=${WM_GW_SINK_SERVICE_RESTART_POLICY:-"restart: always"}
+WM_GW_SINK_SERVICE_USER=${WM_GW_SINK_SERVICE_USER:-"user: root"}
 
 # Gateway transport service
 WM_GW_ID=${WM_GW_ID:-"$(hostname)"}
@@ -54,9 +56,13 @@ WM_GW_IGNORED_ENDPOINTS_FILTER=${WM_GW_IGNORED_ENDPOINTS_FILTER:-}
 WM_GW_WHITENED_ENDPOINTS_FILTER=${WM_GW_WHITENED_ENDPOINTS_FILTER:-}
 WM_GW_TRANSPORT_SERVICE_CMD=${WM_GW_TRANSPORT_SERVICE_CMD:-"transport"}
 WM_GW_TRANSPORT_SERVICE_NETWORK=${WM_GW_TRANSPORT_SERVICE_NETWORK:-"network_mode: host"}
+WM_GW_TRANSPORT_SERVICE_RESTART_POLICY=${WM_GW_TRANSPORT_SERVICE_RESTART_POLICY:-"restart: always"}
+WM_GW_TRANSPORT_SERVICE_USER=${WM_GW_TRANSPORT_SERVICE_USER:-"user: root"}
 
 WM_GW_SERVICES_ENV_FILE=${WM_GW_SERVICES_ENV_FILE:-"${WM_CFG_GATEWAY_PATH}/services.env"}
 WM_GW_SERVICES_USER_PATH=${WM_GW_SERVICES_USER_PATH:-"${WM_CFG_GATEWAY_PATH}/user"}
+WM_GW_DEBUG_LEVEL=${WM_GW_DEBUG_LEVEL:-}
+
 
 # Docker daemon settings
 WM_DOCKER_USERNAME=${WM_DOCKER_USERNAME:-""}
@@ -84,6 +90,7 @@ WM_SERVICES_FLUENTD_SUB_SECOND_PRECISION=${WM_SERVICES_FLUENTD_SUB_SECOND_PRECIS
 WM_SERVICES_FLUENTD_BUFFER_LIMIT=${WM_SERVICES_FLUENTD_BUFFER_LIMIT:-"\"50M\""}
 WM_SERVICES_FLUENTD_RETRY_WAIT=${WM_SERVICES_FLUENTD_RETRY_WAIT:-"\"1s\""}
 WM_SERVICES_FLUENTD_MAX_RETRIES=${WM_SERVICES_FLUENTD_MAX_RETRIES:-"\"3\""}
+WM_SERVICES_FLUENTD_DOCKER_CLI=${WM_SERVICES_FLUENTD_DOCKER_CLI:-"true"}
 
 # WiFi management - set the AP SSID and PASSWORD you want your gw to connect to
 WM_WIFI_ENABLE=${WM_WIFI_ENABLE:-"false"}
