--- a/templates/docker-compose.lxgw-sink.template
+++ b/templates/docker-compose.lxgw-sink.template
@@ -3,18 +3,19 @@
         container_name: wm-gw-sink-${WM_GW_SINK_UART_PORT_NAME}-id-${WM_GW_SINK_ID}
         image: ${WM_GW_IMAGE}:${WM_GW_VERSION}
 
-        user: root
+        ${WM_GW_SINK_SERVICE_USER}
         privileged: true
         stdin_open: true
         tty: true
-        ${WM_GW_SINK_SERVICE_NETWORK}
+        ${WM_GW_SINK_SERVICE_RESTART_POLICY}
 
-        restart: always
+        ${WM_GW_SINK_SERVICE_NETWORK}
 
         environment:
             - WM_SINK_UART_PORT=${WM_SINK_UART_PORT}
             - WM_SINK_UART_BITRATE=${WM_SINK_UART_BITRATE}
             - WM_SINK_ID=${WM_SINK_ID}
+            - WM_DEBUG_LEVEL=${WM_GW_DEBUG_LEVEL}
 
         volumes:
             - /dev:/dev
