--- a/environment/custom.env
+++ b/environment/custom.env
@@ -40,8 +40,7 @@
 
 
 # Feature selection
-# Use this file to override which features are enabled on your host
-
+# set to true/false features you want to use in your host
 # WM_HOST_REBOOT=true # it will restart your host if needed
 # WM_HOST_SYSTEMD_MANAGEMENT=true # requires systemd
 # WM_HOST_CLOCK_MANAGEMENT=true # requires  systemd-timesyncd
@@ -57,4 +56,4 @@
 # dynamically.
 # The symbolic link /dev/ttyWM is used when set to false. The symbolic
 # link will match the last inserted device on the host.
-# WM_CONFIG_MULTI_SINK="true"
+# WM_GW_SINK_ENUMERATION="true"
