--- a/templates/docker-compose.lxgw-transport.template
+++ b/templates/docker-compose.lxgw-transport.template
@@ -25,11 +25,21 @@
             - WM_SERVICES_CERTIFICATE_CHAIN=${WM_SERVICES_CERTIFICATE_CHAIN}
             - WM_SERVICES_GATEWAY_IGNORED_ENDPOINTS_FILTER=${WM_SERVICES_GATEWAY_IGNORED_ENDPOINTS_FILTER}
             - WM_SERVICES_GATEWAY_WHITENED_ENDPOINTS_FILTER=${WM_SERVICES_GATEWAY_WHITENED_ENDPOINTS_FILTER}
+            - WM_SERVICES_MQTT_CLIENT_CRT=${WM_SERVICES_MQTT_CLIENT_CRT:-}
+            - WM_SERVICES_MQTT_CLIENT_KEY=${WM_SERVICES_MQTT_CLIENT_KEY:-}
+            - WM_SERVICES_MQTT_CIPHERS=${WM_SERVICES_MQTT_CIPHERS:-}
+            - WM_SERVICES_MQTT_PERSIST_SESSION=${WM_SERVICES_MQTT_PERSIST_SESSION:-}
+            - WM_GW_BUFFERING_MAX_BUFFERED_PACKETS=${WM_GW_BUFFERING_MAX_BUFFERED_PACKETS:-}
+            - WM_GW_BUFFERING_MAX_DELAY_WITHOUT_PUBLISH=${WM_GW_BUFFERING_MAX_DELAY_WITHOUT_PUBLISH:-}
+            - WM_GW_BUFFERING_MINIMAL_SINK_COST=${WM_GW_BUFFERING_MINIMAL_SINK_COST:-}
+            - WM_SERVICES_MQTT_CERT_REQS=${WM_SERVICES_MQTT_CERT_REQS:-"CERT_REQUIRED"}
+            - WM_SERVICES_MQTT_TLS_VERSION=${WM_SERVICES_MQTT_TLS_VERSION:-"PROTOCOL_TLSv1_2"}
+            - WM_SERVICES_MQTT_RECONNECT_DELAY=${WM_SERVICES_MQTT_RECONNECT_DELAY:-}
             - WM_DEBUG_LEVEL=${WM_GW_DEBUG_LEVEL}
-
 
         volumes:
             - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
             - ${WM_GW_SERVICES_USER_PATH}:/etc/wirepas/gateway
 
         command: ${WM_GW_TRANSPORT_SERVICE_CMD}
+
